gcc/testsuite/g++.old-deja/g++.ns/using4.C
// { dg-do assemble  }
//Build don't link
#include <vector>
namespace csp {
using namespace std::vector;  // { dg-error "" } vector is not a namespace
}
